# svg2gcode

./: Cargo.toml  install.sh
cli/: Cargo.toml
cli/src/: main.rs
lib/: Cargo.toml
lib/src/: lib.rs  postprocess.rs
lib/src/optimizer/: block.rs  ga.rs  mod.rs
optimizer/: Cargo.toml
optimizer/src/: main.rs
